# nbox

./: README.md  install.sh  pyproject.toml
.claude/: CLAUDE.md  settings.json
experimental/: inject.py
images/fedora/: Containerfile
images/fedora-claude/: Containerfile
images/fedora-toolbox/: Containerfile
images/ubuntu/: Containerfile
images/ubuntu-claude/: Containerfile
src/nbox/: __init__.py
tests/: e2e.py
