[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbox"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# [tool.pyright]
# typeCheckingMode = "strict"

[tool.mypy]
strict = true

[dependency-groups]
dev = ["ruff", "mypy"]
